Starting on frontend

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,44 @@
+<!DOCTYPE html>
 <html>
 
+<head>
+    <title>Gopher Kombat !</title>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+    <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600' rel='stylesheet' type='text/css'>
+
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
+
 <body>
-Hello from gopher kombat ^^
+    <div class="outer-wrapper">
+        <div class="inner-wrapper">
+            <div class="header">
+                <div class="logo">GopherKombat</div>
+                <div class="nav">Blueprint</div>
+                <div class="nav">Kombat</div>
+                <div class="nav">Rankings</div>
+                <div class="profile">&nbsp;</div>
+            </div>
+            <div class="content">
+                <div id="headline">My blueprint</div>
+                <div class="editor-wrapper">
+                    <div id="editor">
+                    
+                    </div>
+                    <div id="apidoc">
+
+                    </div>
+                </div>                
+            </div>
+        </div>
+    </div>
+    <script type="application/javascript" src="main.js"></script>
 </body>
+
 </html>
