--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
     <script type="application/javascript" src="js/main.js" defer></script>
 </head>
 
